fix: The transaction cannot be found.